--- a/changeLog
+++ b/changeLog
@@ -1,5 +1,13 @@
 Changelog for GEMC
 ==================
+
+7/10/17
+ - fixed taggin scheme for smeared info in particle summary bank
+ - better name for general scene: gemcLab
+
+7/6/17
+ - fixed timewindow for mirror object, now behaving like flux correctly
+
 6/29/17
  - fixed beagle format
  - fixed user info clearing for each particle
