--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+7/13/17
+ - removing duplicate instructions in sensitive detector
+
 7/11/17
  - added culling combo option in the GUI
  - added button to show 100cm long axes
