--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+7/14/17
+ - implemented mini-stagger for clas12 dc 
+
 7/13/17
  - removing duplicate instructions in sensitive detector
 
