dc staggering indexing fixed

--- a/changeLog
+++ b/changeLog
@@ -2,8 +2,9 @@ Changelog for GEMC
 ==================
 
 8/30/17
- - do not initialize ltcc before digitization starts (not needed)"
+ - do not initialize ltcc before digitization starts (not needed)
  - added two processes to catalogue
+ - fixed the DC staggering indexing
 
 8/25/17
  - fixed an issue with the header bank where the LUND info index was not correct
