--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,12 @@
 Changelog for GEMC
 ==================
 
+10/3/17
+ - added detector threshold variable detectorThreshold that can be set and used in the digitization routine in conjuction with writeHit
+ - added bool detector variable writeHit to decide if a hit is written or not in the output
+ - fixed bug that crashed output routine in case no hits were presented to it
+
+
 8/30/17
  - do not initialize ltcc before digitization starts (not needed)
  - added two processes to catalogue
