--- a/changeLog
+++ b/changeLog
@@ -1,7 +1,10 @@
 Changelog for GEMC
 ==================
 
-1/2/17
+11/7/17
+ - removed unnecessary checks on hitType: it will never be mirror:. Good catch by Angus Hollands. Addressed issue 116
+
+11/2/17
  - renamed variable id to gid in gbank class
 
 10/31/17
