- added background hit for BST. Correction first commit: It was for BMT

--- a/changeLog
+++ b/changeLog
@@ -2,7 +2,7 @@ Changelog for GEMC
 ==================
 
 2/16/18
- - added background hit for BST
+ - added background hit for BST. Correction first commit: It was for BMT
 
 2/5/18
  - added member userInfos vector<double> in the identifier class so users can pass variables from processID to digitization
